--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@supabase/supabase-js": "^1.31.1",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.17",
     "pinia-plugin-persist": "^1.0.0",
+    "v-calendar": "^3.0.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
